// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Button should renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button>
    Test
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "background": undefined,
      "children": <View
        style={
          Object {
            "backgroundColor": "#2BBB48",
            "borderRadius": 5,
            "height": 45,
            "justifyContent": "center",
            "marginVertical": 10,
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          TEST
        </Text>
      </View>,
      "onPress": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          TEST
        </Text>,
        "style": Object {
          "backgroundColor": "#2BBB48",
          "borderRadius": 5,
          "height": 45,
          "justifyContent": "center",
          "marginVertical": 10,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "TEST",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "white",
            "fontWeight": "bold",
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "TEST",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "background": undefined,
        "children": <View
          style={
            Object {
              "backgroundColor": "#2BBB48",
              "borderRadius": 5,
              "height": 45,
              "justifyContent": "center",
              "marginVertical": 10,
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            TEST
          </Text>
        </View>,
        "onPress": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            TEST
          </Text>,
          "style": Object {
            "backgroundColor": "#2BBB48",
            "borderRadius": 5,
            "height": 45,
            "justifyContent": "center",
            "marginVertical": 10,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "TEST",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "TEST",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Components Button should renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    text="qdwdqw"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "background": undefined,
      "children": <View
        style={
          Object {
            "backgroundColor": "#2BBB48",
            "borderRadius": 5,
            "height": 45,
            "justifyContent": "center",
            "marginVertical": 10,
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          QDWDQW
        </Text>
      </View>,
      "onPress": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          QDWDQW
        </Text>,
        "style": Object {
          "backgroundColor": "#2BBB48",
          "borderRadius": 5,
          "height": 45,
          "justifyContent": "center",
          "marginVertical": 10,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "QDWDQW",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "white",
            "fontWeight": "bold",
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "QDWDQW",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "background": undefined,
        "children": <View
          style={
            Object {
              "backgroundColor": "#2BBB48",
              "borderRadius": 5,
              "height": 45,
              "justifyContent": "center",
              "marginVertical": 10,
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            QDWDQW
          </Text>
        </View>,
        "onPress": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "fontWeight": "bold",
                "textAlign": "center",
              }
            }
          >
            QDWDQW
          </Text>,
          "style": Object {
            "backgroundColor": "#2BBB48",
            "borderRadius": 5,
            "height": 45,
            "justifyContent": "center",
            "marginVertical": 10,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "QDWDQW",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "fontWeight": "bold",
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "QDWDQW",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
